--- a/app/src/main/res/layout/activity_b.xml
+++ b/app/src/main/res/layout/activity_b.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:layout_width="413dp"
+        android:layout_width="match_parent"
         android:layout_height="36dp"
         android:background="?attr/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
